# prosenos

./: .env.example  .gitignore  AGENTS.md  Makefile  PROJECT_CONTEXT.md  main.py  pyproject.toml
app/: main.py
app/core/: config.py  database.py
app/domain/: enums.py
app/domain/models/: game.py  stats.py  team.py
app/domain/schemas/: game.py  stats.py  team.py
app/infrastructure/api/routes/: deps.py  futbol.py  games.py  health.py  teams.py  ws.py
app/infrastructure/repositories/: game.py  stats.py  team.py
app/infrastructure/services/: connection_manager.py  futbol.py  game.py  helpers.py  stats.py  team.py
core/domain/: enums.py
microservices/futbol_scraper/: Makefile  constants.py  main.py  pyproject.toml
microservices/futbol_scraper/clients/: futbol.py
microservices/futbol_scraper/mappers/: match_mapper.py
microservices/futbol_scraper/models/: match.py
schemas/: team.py
tests/: conftest.py  test_futbol.py  test_teams.py
